--- a/PalestraPalestrante/PalestraPalestrante.csproj
+++ b/PalestraPalestrante/PalestraPalestrante.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Database\SQLScripts\" />
+  </ItemGroup>
+
 </Project>
