--- a/PalestraPalestrante/appsettings.json
+++ b/PalestraPalestrante/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "MySQLConnection": "server=localhost;database=db_vxgames;user=root;password=root"
+     }
 }
