--- a/PalestraPalestrante/appsettings.json
+++ b/PalestraPalestrante/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "MySQLConnection": "server=localhost;database=db_vxgames;user=root;password=root"
-     }
+  "ConnectionStrings": {
+    "MySQLConnection": "server=localhost;database=db_palestra;user=root;password=root"
+  }
 }
