--- a/PalestraPalestrante/PalestraPalestrante.csproj
+++ b/PalestraPalestrante/PalestraPalestrante.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\assets\image\home\" />
+    <Folder Include="wwwroot\assets\image\fromdb\" />
   </ItemGroup>
 
 </Project>
