adicionando mudanças casa

--- a/PalestraPalestrante/appsettings.json
+++ b/PalestraPalestrante/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySQLConnection": "server=localhost;database=db_palestra;user=root;password=12345678"
+    "MySQLConnection": "server=localhost;database=db_palestra;user=root;password=root"
   }
 }
